some logics done some left

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <title>Burger baR and input thingZ</title>
 </head>
 <body>
@@ -33,6 +34,17 @@
 
         </nav>
     </header>
+
+    <section>
+        <div class="whole-box">
+            <form action="#" class="form-box">
+                <span class="spanforinput">Give Us Your Favourite Numbers or Qoutes?!</span>
+                <input type="text" type="number" class="inputClass" placeholder="type and add it... >>>">
+                <button class="button">Add it!</button>
+            </form>
+            <ul class="ghost-ul"></ul>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
